swagger docs for add tokens method
